--- a/special/index.html
+++ b/special/index.html
@@ -13,9 +13,11 @@
             overflow: hidden;
         }
     </style>
+    
 </head>
 
 <body>
+    <script src="gl-matrix.js"></script>
     <script src="classes.js"></script>
 
     <script>
@@ -25,5 +27,3 @@
         });
     </script>
 </body>
-
-</html>
